docs: replace pip/pip3 with uv in README and notebook

--- a/notebooks/qualitative_analysis.ipynb
+++ b/notebooks/qualitative_analysis.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "# Install required libraries if not already installed\n",
     "# Uncomment the line below if running in an environment without these packages\n",
-    "# !pip3 install -r ../requirements.txt"
+    "# !uv install -r ../requirements.txt"
    ]
   },
   {
