fix: update execution counts and model IDs in qualitative_analysis notebook

--- a/notebooks/qualitative_analysis.ipynb
+++ b/notebooks/qualitative_analysis.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6c753fc2",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "aa16acea",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "280f4cd9",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "d5f78826",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "82a39a43",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2026-01-28 14:57:17,899 - BERTopic - Embedding - Transforming documents to embeddings.\n"
+      "2026-01-28 17:06:33,490 - BERTopic - Embedding - Transforming documents to embeddings.\n"
      ]
     },
     {
@@ -226,7 +226,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff90811f588c47809887197bf968979a",
+       "model_id": "37a2799489b44195b2ba330daac7fd26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -253,7 +253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54ecc32d1d88486c8a93e4868ae5a166",
+       "model_id": "8c23f1168e6c410ea804fea215f0572c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -268,185 +268,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2026-01-28 14:57:46,935 - BERTopic - Embedding - Completed ✓\n",
-      "2026-01-28 14:57:46,935 - BERTopic - Dimensionality - Fitting the dimensionality reduction algorithm\n",
-      "2026-01-28 14:58:27,489 - BERTopic - Dimensionality - Completed ✓\n",
-      "2026-01-28 14:58:27,490 - BERTopic - Cluster - Start clustering the reduced embeddings\n",
-      "2026-01-28 14:58:28,068 - BERTopic - Cluster - Completed ✓\n",
-      "2026-01-28 14:58:28,068 - BERTopic - Representation - Extracting topics using c-TF-IDF for topic reduction.\n",
-      "2026-01-28 14:58:28,525 - BERTopic - Representation - Completed ✓\n",
-      "2026-01-28 14:58:28,526 - BERTopic - Topic reduction - Reducing number of topics\n",
-      "2026-01-28 14:58:31,014 - BERTopic - Representation - Fine-tuning topics using representation models.\n",
-      "2026-01-28 14:58:31,483 - BERTopic - Representation - Completed ✓\n",
-      "2026-01-28 14:58:31,487 - BERTopic - Topic reduction - Reduced number of topics from 2256 to 1262\n"
+      "2026-01-28 17:07:04,405 - BERTopic - Embedding - Completed ✓\n",
+      "2026-01-28 17:07:04,406 - BERTopic - Dimensionality - Fitting the dimensionality reduction algorithm\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "✓ BERTopic identified 1261 topics (excluding outliers)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Topic</th>\n",
-       "      <th>Count</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Representation</th>\n",
-       "      <th>Representative_Docs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-1</td>\n",
-       "      <td>8311</td>\n",
-       "      <td>-1_x000d_and_product_alcohol</td>\n",
-       "      <td>[x000d, and, product, alcohol, is, that, be, i...</td>\n",
-       "      <td>[Caller asked general questions about malt bev...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>538</td>\n",
-       "      <td>0_ttb_return_x000d_id</td>\n",
-       "      <td>[ttb, return, x000d, id, fedex, locate, 243410...</td>\n",
-       "      <td>[TTB#23065001001026, TTB#25213001000382, TTB#2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>515</td>\n",
-       "      <td>1_hang_hangup_up_hung</td>\n",
-       "      <td>[hang, hangup, up, hung, action, na, hange, ha...</td>\n",
-       "      <td>[hang up, hang up, Hang up]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>418</td>\n",
-       "      <td>2_ds_labeling_questions_with</td>\n",
-       "      <td>[ds, labeling, questions, with, im, quesstions...</td>\n",
-       "      <td>[im with ds labeling questions, im with ds lab...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3</td>\n",
-       "      <td>379</td>\n",
-       "      <td>3_ds_dss_rakija_bam</td>\n",
-       "      <td>[ds, dss, rakija, bam, dis, ws, arak, canadian...</td>\n",
-       "      <td>[DS, DS, DS]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>4</td>\n",
-       "      <td>376</td>\n",
-       "      <td>4_revision_allowable_revisions_10</td>\n",
-       "      <td>[revision, allowable, revisions, 10, list, net...</td>\n",
-       "      <td>[Referred allowable revision# 3(d), Allowable ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>5</td>\n",
-       "      <td>369</td>\n",
-       "      <td>5_wine_os_cooking_frutis</td>\n",
-       "      <td>[wine, os, cooking, frutis, bootcamp, 1wine, d...</td>\n",
-       "      <td>[WINE, WINE, WINE]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>6</td>\n",
-       "      <td>362</td>\n",
-       "      <td>6_vm_asmw_surrender_applications</td>\n",
-       "      <td>[vm, asmw, surrender, applications, appellatio...</td>\n",
-       "      <td>[vm, VM, VM]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>7</td>\n",
-       "      <td>355</td>\n",
-       "      <td>7_fonl_transferred_inquire_specific</td>\n",
-       "      <td>[fonl, transferred, inquire, specific, rejecte...</td>\n",
-       "      <td>[transferred to FONL, transferred to FONL, tra...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>8</td>\n",
-       "      <td>320</td>\n",
-       "      <td>8_bring_compliance_into_how</td>\n",
-       "      <td>[bring, compliance, into, how, explained, labe...</td>\n",
-       "      <td>[Explained how to bring the label into complia...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Topic  Count                                 Name  \\\n",
-       "0     -1   8311         -1_x000d_and_product_alcohol   \n",
-       "1      0    538                0_ttb_return_x000d_id   \n",
-       "2      1    515                1_hang_hangup_up_hung   \n",
-       "3      2    418         2_ds_labeling_questions_with   \n",
-       "4      3    379                  3_ds_dss_rakija_bam   \n",
-       "5      4    376    4_revision_allowable_revisions_10   \n",
-       "6      5    369             5_wine_os_cooking_frutis   \n",
-       "7      6    362     6_vm_asmw_surrender_applications   \n",
-       "8      7    355  7_fonl_transferred_inquire_specific   \n",
-       "9      8    320          8_bring_compliance_into_how   \n",
-       "\n",
-       "                                      Representation  \\\n",
-       "0  [x000d, and, product, alcohol, is, that, be, i...   \n",
-       "1  [ttb, return, x000d, id, fedex, locate, 243410...   \n",
-       "2  [hang, hangup, up, hung, action, na, hange, ha...   \n",
-       "3  [ds, labeling, questions, with, im, quesstions...   \n",
-       "4  [ds, dss, rakija, bam, dis, ws, arak, canadian...   \n",
-       "5  [revision, allowable, revisions, 10, list, net...   \n",
-       "6  [wine, os, cooking, frutis, bootcamp, 1wine, d...   \n",
-       "7  [vm, asmw, surrender, applications, appellatio...   \n",
-       "8  [fonl, transferred, inquire, specific, rejecte...   \n",
-       "9  [bring, compliance, into, how, explained, labe...   \n",
-       "\n",
-       "                                 Representative_Docs  \n",
-       "0  [Caller asked general questions about malt bev...  \n",
-       "1  [TTB#23065001001026, TTB#25213001000382, TTB#2...  \n",
-       "2                        [hang up, hang up, Hang up]  \n",
-       "3  [im with ds labeling questions, im with ds lab...  \n",
-       "4                                       [DS, DS, DS]  \n",
-       "5  [Referred allowable revision# 3(d), Allowable ...  \n",
-       "6                                 [WINE, WINE, WINE]  \n",
-       "7                                       [vm, VM, VM]  \n",
-       "8  [transferred to FONL, transferred to FONL, tra...  \n",
-       "9  [Explained how to bring the label into complia...  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "# Step 3: Apply BERTopic for theme extraction\n",
-    "# Select model to run ('bertopic' or 'top2vec') -- uses existing value if set\n",
+    "# Select model to run ('bertopic') -- uses existing value if set\n",
     "model_choice = globals().get('model_choice', 'bertopic')\n",
     "\n",
     "if all_texts:\n",
@@ -698,7 +527,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qda_env",
+   "display_name": "qdalocal",
    "language": "python",
    "name": "python3"
   },
@@ -712,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
