fix: remove execution counts and outputs from qualitative_analysis notebook cells

--- a/notebooks/qualitative_analysis.ipynb
+++ b/notebooks/qualitative_analysis.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6c753fc2",
    "metadata": {},
    "outputs": [],
@@ -37,18 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "aa16acea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Libraries imported successfully!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -71,26 +63,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "280f4cd9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ Successfully loaded workbook: ../data/raw/callcenterdata.xlsx\n",
-      "Loaded sheets: ['COLA FONL Unique', 'General Inqury Unique', 'Unique Values', 'Contact Reason Details', 'Summary', 'Filtered Patty', 'Further anlaysis']\n",
-      "  - COLA FONL Unique: 2517 rows, 11 columns\n",
-      "  - General Inqury Unique: 1583 rows, 11 columns\n",
-      "  - Unique Values: 57974 rows, 4 columns\n",
-      "  - Contact Reason Details: 31879 rows, 11 columns\n",
-      "  - Summary: 247 rows, 4 columns\n",
-      "  - Filtered Patty: 249 rows, 10 columns\n",
-      "  - Further anlaysis: 8 rows, 16 columns\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 1: Load the Excel workbook\n",
     "# Replace 'your_workbook.xlsx' with the path to your Excel file\n",
@@ -117,50 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d5f78826",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Processing sheet: COLA FONL Unique\n",
-      "  Found text columns: ['Comment']\n",
-      "    - Comment: 2517 texts extracted\n",
-      "\n",
-      "Processing sheet: General Inqury Unique\n",
-      "  Found text columns: ['Comment']\n",
-      "    - Comment: 1582 texts extracted\n",
-      "\n",
-      "Processing sheet: Unique Values\n",
-      "  Found text columns: ['Comment']\n",
-      "    - Comment: 57944 texts extracted\n",
-      "\n",
-      "Processing sheet: Contact Reason Details\n",
-      "  Found text columns: ['Comment']\n",
-      "    - Comment: 31865 texts extracted\n",
-      "\n",
-      "Processing sheet: Summary\n",
-      "  Warning: No text columns found in 'Summary'. Available columns: ['Date Range: 10/1/2021 to 12/10/2025', 'Unnamed: 1', 'Unnamed: 2', 'Instance']\n",
-      "\n",
-      "Processing sheet: Filtered Patty\n",
-      "  Warning: No text columns found in 'Filtered Patty'. Available columns: ['Date Range: 10/1/2021 to 12/10/2025', 'Contact Reason Detail', 'Instance', 'Unnamed: 3', 'Sorted by type', 'Unnamed: 5', 'All', 'Unnamed: 7', 'All - collapsed', 'Where']\n",
-      "\n",
-      "Processing sheet: Further anlaysis\n",
-      "  Warning: No text columns found in 'Further anlaysis'. Available columns: ['Unnamed: 0', 'Unnamed: 1', 'Unnamed: 2', 'Unnamed: 3', 'Unnamed: 4', 'Wine top reasons for contact', 'Unnamed: 6', 'Unnamed: 7', 'Unnamed: 8', 'Formulation* top reasons for contact', 'Unnamed: 10', 'Unnamed: 11', 'Unnamed: 12', 'Distilled spirits top reasons for contact', 'Unnamed: 14', 'Unnamed: 15']\n",
-      "\n",
-      "✓ Total texts extracted: 93908\n",
-      "Sample text:  \tADDRESS VERIFICATION FOR PERMIT FL-I-15562...\n",
-      "✓ Processed texts saved to data/processed/extracted_texts.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 2: Extract qualitative text data\n",
     "# Configure text column names to extract from\n",
-    "text_columns = ['Comment']  # Add your column names here\n",
+    "text_columns = ['Contact Reason', 'Contact Reason Detail', 'Instance', 'Channel', 'Original Skill', 'Comment', 'Domestic or Imported']  # Add your column names here\n",
     "\n",
     "all_texts = []\n",
     "text_sources = []  # Track which sheet each text came from\n",
@@ -207,72 +147,7 @@
    "execution_count": null,
    "id": "82a39a43",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2026-01-28 17:06:33,490 - BERTopic - Embedding - Transforming documents to embeddings.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running BERTOPIC analysis on 93908 texts...\n",
-      "Dataset is large (93908 texts). Sampling to 50,000 for analysis to avoid memory issues.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37a2799489b44195b2ba330daac7fd26",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading weights:   0%|          | 0/103 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "BertModel LOAD REPORT from: sentence-transformers/all-MiniLM-L6-v2\n",
-      "Key                     | Status     |  | \n",
-      "------------------------+------------+--+-\n",
-      "embeddings.position_ids | UNEXPECTED |  | \n",
-      "\n",
-      "Notes:\n",
-      "- UNEXPECTED\t:can be ignored when loading from different task/architecture; not ok if you expect identical arch.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c23f1168e6c410ea804fea215f0572c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Batches:   0%|          | 0/1563 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2026-01-28 17:07:04,405 - BERTopic - Embedding - Completed ✓\n",
-      "2026-01-28 17:07:04,406 - BERTopic - Dimensionality - Fitting the dimensionality reduction algorithm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 3: Apply BERTopic for theme extraction\n",
     "# Select model to run ('bertopic') -- uses existing value if set\n",
