fix: streamline qualitative analysis notebook by removing unused model options and optimizing text extraction

--- a/notebooks/qualitative_analysis.ipynb
+++ b/notebooks/qualitative_analysis.ipynb
@@ -13,7 +13,6 @@
     "- Load multiple Excel sheets/tabs\n",
     "- Extract qualitative text from specified columns\n",
     "- Apply BERTopic for hierarchical theme extraction\n",
-    "- Alternative Top2Vec implementation\n",
     "- Interactive visualizations\n",
     "- Export results for QDA tools (Taguette, QualCoder, etc.)\n",
     "\n",
@@ -100,7 +99,7 @@
    "source": [
     "# Step 2: Extract qualitative text data\n",
     "# Configure text column names to extract from\n",
-    "text_columns = ['Contact Reason', 'Contact Reason Detail', 'Instance', 'Channel', 'Original Skill', 'Comment', 'Domestic or Imported']  # Add your column names here\n",
+    "text_columns = ['Contact Reason', 'Contact Reason Detail']  # Add your column names here\n",
     "\n",
     "all_texts = []\n",
     "text_sources = []  # Track which sheet each text came from\n",
@@ -150,7 +149,6 @@
    "outputs": [],
    "source": [
     "# Step 3: Apply BERTopic for theme extraction\n",
-    "# Select model to run ('bertopic') -- uses existing value if set\n",
     "model_choice = globals().get('model_choice', 'bertopic')\n",
     "\n",
     "if all_texts:\n",
@@ -165,52 +163,30 @@
     "    else:\n",
     "        analysis_texts = all_texts\n",
     "        analysis_sources = text_sources\n",
+    "\n",
+    "    # Import additional libraries for custom models\n",
+    "    from umap import UMAP\n",
+    "    from hdbscan import HDBSCAN\n",
     "    \n",
-    "    if model_choice == 'bertopic':\n",
-    "        # Import additional libraries for custom models\n",
-    "        from umap import UMAP\n",
-    "        from hdbscan import HDBSCAN\n",
-    "        \n",
-    "        # Initialize BERTopic model with optimized settings for large datasets\n",
-    "        topic_model = BERTopic(\n",
-    "            language=\"english\",\n",
-    "            calculate_probabilities=False,  # Set to False to reduce memory usage\n",
-    "            verbose=True,\n",
-    "            min_topic_size=5,  # Increased from 5 to reduce number of topics and memory\n",
-    "            nr_topics=\"auto\",   # Auto-determine number of topics\n",
-    "            low_memory=True,  # Enable low memory mode for large datasets\n",
-    "            umap_model=UMAP(n_jobs=1),  # Disable multiprocessing in UMAP\n",
-    "            hdbscan_model=HDBSCAN(core_dist_n_jobs=1)  # Disable multiprocessing in HDBSCAN\n",
-    "        )\n",
-    "        \n",
-    "        # Fit the model\n",
-    "        topics, probabilities = topic_model.fit_transform(analysis_texts)\n",
-    "        \n",
-    "        # Get topic information\n",
-    "        theme_info = topic_model.get_topic_info()\n",
-    "        \n",
-    "        print(f\"\\n✓ BERTopic identified {len(theme_info)-1} topics (excluding outliers)\")\n",
-    "        \n",
-    "    elif model_choice == 'top2vec':\n",
-    "        # Initialize Top2Vec model\n",
-    "        topic_model = Top2Vec(\n",
-    "            documents=analysis_texts,\n",
-    "            speed=\"learn\",  # 'fast-learn', 'learn', 'deep-learn'\n",
-    "        )\n",
-    "        \n",
-    "        # Get topic information\n",
-    "        topic_sizes, topic_nums = topic_model.get_topic_sizes()\n",
-    "        topics_words = topic_model.get_topics()\n",
-    "        \n",
-    "        # Create theme_info DataFrame\n",
-    "        theme_info = pd.DataFrame({\n",
-    "            'Topic': topic_nums,\n",
-    "            'Count': topic_sizes,\n",
-    "            'Name': [', '.join(words[0][:10]) for words in topics_words],  # Top 10 words\n",
-    "            'Representation': [words[0][:10] for words in topics_words]\n",
-    "        })\n",
-    "        \n",
-    "        print(f\"\\n✓ Top2Vec identified {len(theme_info)} topics\")\n",
+    "    # Initialize BERTopic model with optimized settings for large datasets\n",
+    "    topic_model = BERTopic(\n",
+    "        language=\"english\",\n",
+    "        calculate_probabilities=False,  # Set to False to reduce memory usage\n",
+    "        verbose=True,\n",
+    "        min_topic_size=10,  # Increased from 5 to reduce number of topics and memory\n",
+    "        nr_topics=\"auto\",   # Auto-determine number of topics\n",
+    "        low_memory=True,  # Enable low memory mode for large datasets\n",
+    "        umap_model=UMAP(n_jobs=1),  # Disable multiprocessing in UMAP\n",
+    "        hdbscan_model=HDBSCAN(core_dist_n_jobs=1)  # Disable multiprocessing in HDBSCAN\n",
+    "    )\n",
+    "    \n",
+    "    # Fit the model\n",
+    "    topics, probabilities = topic_model.fit_transform(analysis_texts)\n",
+    "    \n",
+    "    # Get topic information\n",
+    "    theme_info = topic_model.get_topic_info()\n",
+    "    \n",
+    "    print(f\"\\n✓ BERTopic identified {len(theme_info)-1} topics (excluding outliers)\")\n",
     "    \n",
     "    # Display extracted themes\n",
     "    display(theme_info.head(10))\n",
@@ -252,7 +228,7 @@
     "    except Exception as e:\n",
     "        print(f\"Failed to render figure as HTML: {e}\")\n",
     "\n",
-    "if theme_info is not None and model_choice == 'bertopic' and topic_model is not None:\n",
+    "if theme_info is not None and topic_model is not None:\n",
     "    print(\"Generating visualizations...\")\n",
     "    \n",
     "    # Topic visualization\n",
@@ -279,18 +255,6 @@
     "        _display_fig(fig_barchart, title='Top Topics Barchart')\n",
     "    except Exception as e:\n",
     "        print(f\"Barchart visualization failed: {e}\")\n",
-    "        \n",
-    "elif theme_info is not None and model_choice == 'top2vec':\n",
-    "    print(\"Top2Vec visualizations not implemented in this notebook.\")\n",
-    "    print(\"Consider using BERTopic for richer visualizations.\")\n",
-    "    \n",
-    "    # Simple bar chart for Top2Vec\n",
-    "    plt.figure(figsize=(12, 6))\n",
-    "    plt.bar(range(len(theme_info)), theme_info['Count'])\n",
-    "    plt.xlabel('Topic Number')\n",
-    "    plt.ylabel('Number of Documents')\n",
-    "    plt.title('Top2Vec Topic Distribution')\n",
-    "    plt.show()\n",
     "    \n",
     "else:\n",
     "    if theme_info is None:\n",
@@ -315,46 +279,38 @@
     "    theme_info.to_csv(output_file, index=False)\n",
     "    print(f\"✓ Themes exported to '{output_file}'\")\n",
     "    \n",
-    "    # Export detailed topic information (BERTopic only)\n",
-    "    if model_choice == 'bertopic':\n",
-    "        # Get topic representations\n",
-    "        topic_representations = {}\n",
-    "        for topic_id in theme_info['Topic'].unique():\n",
-    "            if topic_id != -1:  # Skip outlier topic\n",
-    "                words = topic_model.get_topic(topic_id)\n",
-    "                topic_representations[topic_id] = words\n",
-    "        \n",
-    "        # Create detailed export\n",
-    "        detailed_themes = []\n",
-    "        for topic_id, words in topic_representations.items():\n",
-    "            detailed_themes.append({\n",
-    "                'topic_id': topic_id,\n",
-    "                'topic_name': f\"Topic_{topic_id}\",\n",
-    "                'top_words': ', '.join([word for word, _ in words[:10]]),\n",
-    "                'word_scores': ', '.join([f\"{word}:{score:.3f}\" for word, score in words[:10]]),\n",
-    "                'document_count': theme_info[theme_info['Topic'] == topic_id]['Count'].iloc[0]\n",
-    "            })\n",
-    "        \n",
-    "        detailed_df = pd.DataFrame(detailed_themes)\n",
-    "        detailed_output = f\"../data/results/detailed_themes_{model_choice}.csv\"\n",
-    "        detailed_df.to_csv(detailed_output, index=False)\n",
-    "        print(f\"✓ Detailed themes exported to '{detailed_output}'\")\n",
+    "    # Export detailed topic information\n",
+    "    # Get topic representations\n",
+    "    topic_representations = {}\n",
+    "    for topic_id in theme_info['Topic'].unique():\n",
+    "        if topic_id != -1:  # Skip outlier topic\n",
+    "            words = topic_model.get_topic(topic_id)\n",
+    "            topic_representations[topic_id] = words\n",
+    "    \n",
+    "    # Create detailed export\n",
+    "    detailed_themes = []\n",
+    "    for topic_id, words in topic_representations.items():\n",
+    "        detailed_themes.append({\n",
+    "            'topic_id': topic_id,\n",
+    "            'topic_name': f\"Topic_{topic_id}\",\n",
+    "            'top_words': ', '.join([word for word, _ in words[:10]]),\n",
+    "            'word_scores': ', '.join([f\"{word}:{score:.3f}\" for word, score in words[:10]]),\n",
+    "            'document_count': theme_info[theme_info['Topic'] == topic_id]['Count'].iloc[0]\n",
+    "        })\n",
+    "    \n",
+    "    detailed_df = pd.DataFrame(detailed_themes)\n",
+    "    detailed_output = f\"../data/results/detailed_themes_{model_choice}.csv\"\n",
+    "    detailed_df.to_csv(detailed_output, index=False)\n",
+    "    print(f\"✓ Detailed themes exported to '{detailed_output}'\")\n",
     "    \n",
     "    # Export text-topic assignments for QDA validation\n",
-    "    if model_choice == 'bertopic':\n",
-    "        text_topics_df = pd.DataFrame({\n",
-    "            'text': analysis_texts,\n",
-    "            'source': analysis_sources,\n",
-    "            'topic': topics,\n",
-    "            'topic_probability': [None] * len(topics)  # Probabilities disabled for memory efficiency\n",
-    "        })\n",
-    "    else:\n",
-    "        # For Top2Vec, we'd need to get document-topic assignments\n",
-    "        text_topics_df = pd.DataFrame({\n",
-    "            'text': analysis_texts,\n",
-    "            'source': analysis_sources,\n",
-    "            'topic': ['Top2Vec_topic'] * len(analysis_texts)  # Placeholder\n",
-    "        })\n",
+    "    text_topics_df = pd.DataFrame({\n",
+    "        'text': analysis_texts,\n",
+    "        'source': analysis_sources,\n",
+    "        'topic': topics,\n",
+    "        'topic_probability': [None] * len(topics)  # Probabilities disabled for memory efficiency\n",
+    "    })\n",
+    "\n",
     "    \n",
     "    assignments_file = f\"../data/results/text_topic_assignments_{model_choice}.csv\"\n",
     "    text_topics_df.to_csv(assignments_file, index=False)\n",
