feat: add optional text quality filtering to improve analysis accuracy

--- a/notebooks/qualitative_analysis.ipynb
+++ b/notebooks/qualitative_analysis.ipynb
@@ -142,6 +142,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "192ec1f6",
+   "metadata": {},
+   "source": [
+    "### Optional: Text Quality Filtering\n",
+    "\n",
+    "Before running the AI model, you can filter out texts that are too short or too long. This helps improve topic quality by removing:\n",
+    "- Very short responses (e.g., \"N/A\", \"None\", single words)\n",
+    "- Extremely long texts that might be outliers\n",
+    "- Empty or near-empty entries\n",
+    "\n",
+    "Adjust `min_text_length` and `max_text_length` based on your data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8bee646",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2.5: Filter texts by quality (optional)\n",
+    "# Remove texts that are too short or likely not meaningful\n",
+    "\n",
+    "min_text_length = 10  # Minimum characters per text\n",
+    "max_text_length = 10000  # Maximum characters (remove outliers)\n",
+    "\n",
+    "if all_texts:\n",
+    "    original_count = len(all_texts)\n",
+    "    \n",
+    "    # Filter texts and their sources together\n",
+    "    filtered_data = [\n",
+    "        (text, source) for text, source in zip(all_texts, text_sources)\n",
+    "        if min_text_length <= len(str(text)) <= max_text_length\n",
+    "    ]\n",
+    "    \n",
+    "    if filtered_data:\n",
+    "        all_texts, text_sources = zip(*filtered_data)\n",
+    "        all_texts = list(all_texts)\n",
+    "        text_sources = list(text_sources)\n",
+    "        \n",
+    "        removed_count = original_count - len(all_texts)\n",
+    "        print(f\"✓ Text filtering complete:\")\n",
+    "        print(f\"  - Kept: {len(all_texts)} texts\")\n",
+    "        print(f\"  - Removed: {removed_count} texts (too short or too long)\")\n",
+    "        print(f\"  - Length range: {min_text_length}-{max_text_length} characters\")\n",
+    "        \n",
+    "        # Show distribution\n",
+    "        lengths = [len(str(t)) for t in all_texts]\n",
+    "        print(f\"  - Average length: {np.mean(lengths):.0f} characters\")\n",
+    "        print(f\"  - Median length: {np.median(lengths):.0f} characters\")\n",
+    "    else:\n",
+    "        print(\"✗ Warning: All texts were filtered out. Try adjusting min/max length.\")\n",
+    "else:\n",
+    "    print(\"No texts to filter.\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "82a39a43",
